Sun Feb  7 22:06:04 GMT 1999 Adam D. Moss <adam@gimp.org>

	* app/dialog_handler.c
	* app/fileops.c: Various bugfixes and speedups w.r.t.
	thumbnail loading.  Now has a 'generate thumbnail' button.

	* app/brightness_contrast.c
	* app/color_balance.c
	* app/curves.c
	* app/hue_saturation.c: Changed some gint to gint32.  It
	doesn't matter right now, but it might if the optimized
	CLAMP0255 gets fixed.

Sun Feb  7 18:29:26 GMT 1999 Adam D. Moss <adam@gimp.org>

	* app/fileops.c: A unidirectional error-spread makes
	the saddest little thumbnails taste full of country
	goodness.

	* app/appenv.c: Wow, CLAMP0255() has a bug that I can't
	quite see, or my compiler does.  Worked around it.

Sun Feb  7 15:04:23 GMT 1999 Adam D. Moss <adam@gimp.org>

	* app/fileops.c: More robust and kickin' thumbnail support.

	* app/edit_selection.c app/layer.c app/layer.h: Working
	on lazy opaque layer moves.  Disabled for now.

	* app/gdisplay.c
	* app/gimage.h
	* app/gimpimage.c
	* app/gimpimage.h
	* app/image_render.c
	* app/tile_manager.c: Errr, I don't remember.  No, seriously.
	Nothing of consequence.

Sun Feb  7 02:44:44 PST 1999 Manish Singh <yosh@gimp.org>

	* configure.in: fix setting of $localedir, and use $CONFIG_SHELL
	to run config.status (variation upon gimp-joke-990122-1)

	* plug-ins/fp/fp_gtk.c: make label code consistent so we
	don't get confused (gimp-ruth-990131-0)

	* app/app_procs.c: toast stale swap files on startup

	* app/general.[ch]: removed prune_filename

	* app/by_color_select.c
	* app/colormap_dialog.i.c
	* app/fileops.c
	* app/gdisplay.c
	* app/gdisplay_ops.c
	* app/gimpbrush.c
	* app/gradient.c
	* app/info_window.c
	* app/menus.c
	* app/palette.c
	* app/patterns.c: s/prune_filename/g_basename/

Sat Feb  6 18:16:57 GMT 1999  Austin Donnelly  <austin@gimp.org>

	* app/gdisplay.c: gdisplay_format_title now parses a format string
	      set by the user to control what goes in the image window
	      titles. 